--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Course home page for WDD 231">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Thulio Olímpio">
     <title>WDD 231 | Thulio Olímpio</title>
     <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
