--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 </head>
 <body>
     <header>
+        <button id="menu-button" aria-label="Menu" aria-expanded="false" aria-controls="nav-menu">
+            <span class="hamburger-icon">☰</span>
+            <span class="close-icon hidden">✕</span>
+          </button>
         <img src="images/IMG_4246.JPG" alt="Your Name">
         <span>Thulio Olímpio</span>
     </header>
     <nav>
-        <button id="menu-button">☰</button>
+        
         <ul id="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="chamber.html">Chamber</a></li>
