--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <ul id="nav-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="chamber.html">Chamber</a></li>
+            <li><a href="chamber/directory.html">Chamber</a></li>
             <li><a href="final.html">Final</a></li>
             <li><a href="https://github.com/yourusername">GitHub</a></li>
             <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
