--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Diretório de empresas associadas à Câmara de Comércio">
+    <meta name="description" content="Diretório de empresas associadas à Brazil Chamber Of Commerce">
     <meta name="author" content="Thulio Olímpio">
-    <title>Câmara de Comércio de Pernambuco - Diretório</title>
-    <meta property="og:title" content="Câmara de Comércio - Diretório">
+    <title>Brazil Chamber Of Commerce - Directory</title>
+    <meta property="og:title" content="Brazil Chamber Of Commerce - Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://example.com/images/logo-social.jpg">
-    <meta property="og:url" content="https://example.com/directory.html">
+    <meta property="og:description" content="Explore the directory of companies associated with Brazil Chamber Of Commerce. Find business partners and relevant information.">
+    <meta property="og:image" content="https://www.brazilchamber.com/images/logo-social.jpg">
+    <meta property="og:url" content="https://www.brazilchamber.com/directory.html">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber.css">
@@ -19,8 +20,7 @@
 </head>
 <body>
     <header>
-        <img src="images/8906835.png" alt="Logo Câmara de Comércio" width="100" height="100">
-        <h1>Câmara de Comércio de Pernambuco</h1>
+        <img src="images/8906835.png" alt="Brazil Chamber Of Commerce Logo" width="100" height="100">
         <nav>
             <button id="menu-button" aria-label="Menu">☰</button>
             <ul id="navigation">
@@ -33,18 +33,18 @@
     </header>
 
     <main>
-        <h2>Empresas Associadas</h2>
+        <h1>Business Directory - Brazil Chamber Of Commerce</h1>
         <div class="view-toggle">
-            <button id="grid-view" aria-label="Visualização em grade">Grid</button>
-            <button id="list-view" aria-label="Visualização em lista">Lista</button>
+            <button id="grid-view" aria-label="Grid view">Grid</button>
+            <button id="list-view" aria-label="List view">List</button>
         </div>
         <div id="member-container" class="grid-view"></div>
     </main>
 
     <footer>
-        <p>© <span id="copyright-year"></span> Câmara de Comércio</p>
+        <p>© <span id="copyright-year"></span> Brazil Chamber Of Commerce</p>
         <p>Thulio Olímpio | WDD 231</p>
-        <p>Última modificação: <span id="last-modified"></span></p>
+        <p>Last modified: <span id="last-modified"></span></p>
     </footer>
 
     <script src="scripts/script.js" defer></script>
