--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="Brazil Chamber Of Commerce - Directory">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Explore the directory of companies associated with Brazil Chamber Of Commerce. Find business partners and relevant information.">
-    <meta property="og:image" content="https://www.brazilchamber.com/images/logo-social.jpg">
-    <meta property="og:url" content="https://www.brazilchamber.com/directory.html">
+    <meta property="og:image" content="images/social.png">
+    <meta property="og:url" content="directory.html">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber.css">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <img src="images/8906835.png" alt="Brazil Chamber Of Commerce Logo" width="100" height="100">
+        <img src="images/social.png" alt="Brazil Chamber Of Commerce Logo" width="100" height="100">
         <nav>
             <button id="menu-button" aria-label="Menu">☰</button>
             <ul id="navigation">
