--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="Brazil Chamber Of Commerce - Directory">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Explore the directory of companies associated with Brazil Chamber Of Commerce. Find business partners and relevant information.">
-    <meta property="og:image" content="images/social.png">
-    <meta property="og:url" content="directory.html">
+    <meta property="og:image" content="https://thulioolimpio.github.io/wdd231/chamber/images/social.png">
+    <meta property="og:url" content="https://thulioolimpio.github.io/wdd231/chamber/directory.html">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber.css">
