--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página inicial da Brazil Chamber of Commerce">
-    <title>Brazil Chamber of Commerce</title>
+    <meta name="author" content="Thulio Olímpio">
+    <title>Brazil Chamber of Commerce home page</title>
     <meta property="og:title" content="Brazil Chamber of Commerce">
     <meta property="og:type" content="website">
+    <meta property="og:description" content="Discover featured businesses at Brazil Chamber of Commerce. Explore Gold and Silver member companies, uncover valuable business opportunities, and connect with top industry professionals.">
     <meta property="og:image" content="https://thulioolimpio.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thulioolimpio.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
@@ -53,7 +55,7 @@
         <section class="weather">
             <h2>Weather in Brazil</h2>
             <div id="current-weather">
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon">
                 <p><span id="temperature"></span>°C</p>
                 <p id="weather-desc"></p>
             </div>
