--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
         <section class="weather">
             <h2>Weather in Brazil</h2>
             <div id="current-weather">
-                <img id="weather-icon">
+                <img id="weather-icon" src="images/weather-placeholder.png" alt="Current weather icon">
                 <p><span id="temperature"></span>°C</p>
                 <p id="weather-desc"></p>
             </div>
